# Nuitka-website

./: .browserslistrc  .gitignore  .project  .readthedocs.yaml  .rss_dates.db  .travis.yml  Pipfile  README.rst  _docs.py  auto-format  auto-update.sh  builder_config.py  bundler.py  conf.py  dev-requirements.txt  directives.py  images  make-casts.sh  node-installation.sh  nuitka_import.py  out.txt  package-lock.json  package.json  personas.rst  postcss.config.js  pyproject.toml  regression_utils.py  requirements.txt  rss_builddates.json  settings.ini  settings.py  shared_conf.py  switcher.rst  tasks.py  untruths.rst  update-changelog.py  update.py
.cspell/: custom-dictionary-workspace.txt
.devcontainer/: devcontainer.json
_ext/: carousel.py
_static/: carousel.js  download_link_icons.css  my_theme.css  rtd-theme.js
_templates/: breadcrumbs.html  footer.html  layout.html  page.html  searchbox.html
blog/: .gitignore  conf.py  index.rst
bundle/: conf.py  dynamic.inc  images  index.rst  user-documentation  variables.inc
casts/: welcome-demo.sh
doc/: Changelog.rst  Credits.rst  Developer_Manual.rst  Impressum.rst  Logo  README.rst  Streaming.rst  commercial.rst  conf.py  developer-manual.rst  download.rst  dynamic.inc  factory.rst  fp-card-circle.html  images  index.rst  posts  requirements.txt  roadmap.rst  switcher.rst  translation-status.rst  translation-status.rst.j2  user-manual.rst  variables.inc  welcome.rst
extra/: conf.py  index.rst
files/: humans.txt  images  robots.txt
intl/: api-doc.rst  blog.rst  commercial.rst  conf.py  developer-manual.rst  dynamic.inc  index.rst  more.rst  roadmap.rst  support.rst  use.md  user-manual.rst
misc/: sphinx_autobuild_wrapper.py
pages/: commercial.rst  documentation.rst  donations.rst  download.rst  download.rst.j2  gsoc2019.rst  impressum.rst  mailinglist.rst  nuitka-demo.rst  performance.rst  pyside2.rst  roadmap.rst  support.rst  what-is-nuitka.rst
posts/: article-over-nuitka-standalone.rst  award-winning-cat.rst  batakrishna-sahu-intro.rst  bksahu-intro.rst  bksahus-gsoc-wrap-up.rst  cat-update.rst  changing-python-faq.rst  dateutil-wheel-with-nuitka.rst  family-photo.rst  going-to-europython-2013.rst  going-to-pycon-de.rst  jorj-x-mckie.rst  jorjmckie-intro.rst  letting-go-of-c11.rst  loss-of-service.rst  minor-release-nuitka-011.rst  my-7yr-old-fotographer.rst  my-europython-2013-report.rst  nikola-for-nuitka.rst  (+180 more)
(+675 files in other folders)
